@@ -702,7 +702,7 @@ sub report {
   my $option = $cmd{command}[0];
   my $service = $cmd{command}[1] if (defined $cmd{command}[1]);
   my $type;
-  if (defined $cmd{command}[2]) {
+  if ((defined $cmd{command}[2]) && ($cmd{command}[2] ne '')) {
     $type = $cmd{command}[2];
   } else {
     $type = "all"
